# GPTDolomite

./: .pylintrc  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: lint.yml  pypi.yaml
src/instructlab/: __init__.py
src/instructlab/dolomite/: __init__.py  enums.py
src/instructlab/dolomite/gradient_checkpointing/: __init__.py  block.py
src/instructlab/dolomite/hf_models/: __init__.py  config.py  defaults.py  enums.py  register_hf.py  utils.py
src/instructlab/dolomite/hf_models/mixins/: __init__.py
src/instructlab/dolomite/hf_models/mixins/dense/: __init__.py  base.py  main.py
src/instructlab/dolomite/hf_models/mixins/dense_TP/: __init__.py  base.py  main.py
src/instructlab/dolomite/hf_models/mixins/moe/: __init__.py  base.py  main.py
src/instructlab/dolomite/hf_models/mixins/moe_TP/: __init__.py  base.py  main.py
src/instructlab/dolomite/hf_models/model_conversion/: __init__.py  bigcode.py  granite.py  granitemoe.py  llama.py
src/instructlab/dolomite/hf_models/modeling_utils/: __init__.py  embedding.py  linear.py
src/instructlab/dolomite/hf_models/modeling_utils/activations/: __init__.py  base.py  glu.py  math_gelu.py
src/instructlab/dolomite/hf_models/modeling_utils/attention/: __init__.py  base.py  flash.py  padding_free.py  sdpa.py  utils.py
src/instructlab/dolomite/hf_models/modeling_utils/normalization/: __init__.py  norms.py
src/instructlab/dolomite/hf_models/modeling_utils/normalization/layernorm/: __init__.py  apex.py  apex_persistent.py
src/instructlab/dolomite/hf_models/modeling_utils/normalization/rmsnorm/: __init__.py  apex.py  base.py  torchtitan.py
src/instructlab/dolomite/hf_models/modeling_utils/position_embedding/: __init__.py  alibi.py  rope.py
src/instructlab/dolomite/hf_models/models/: __init__.py
src/instructlab/dolomite/hf_models/models/gpt_dolomite/: __init__.py  base.py  config.py  layer.py  main.py  mlp.py
src/instructlab/dolomite/utils/: __init__.py  hf_hub.py  logger.py  packages.py  parallel.py  safetensors.py  wrapper.py
