# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instructlab-dolomite"
authors = [
    { name="InstructLab", email="dev@instructlab.ai" },
]
description = "Dolomite Engine"
version = "0.0.1"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["dependencies"]

[project.scripts]

[project.urls]
homepage = "https://instructlab.ai"
source = "https://github.com/instructlab/GPTDolomite"
issues = "https://github.com/instructlab/GPTDolomite/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "instructlab.dolomite",
    "instructlab.dolomite.hf_models",
    "instructlab.dolomite.hf_models.models",
    "instructlab.dolomite.hf_models.model_conversion",
    "instructlab.dolomite.hf_models.models.gpt_dolomite",
    "instructlab.dolomite.hf_models.modeling_utils",
    "instructlab.dolomite.hf_models.modeling_utils.activations",
    "instructlab.dolomite.hf_models.modeling_utils.attention",
    "instructlab.dolomite.hf_models.modeling_utils.normalization",
    "instructlab.dolomite.hf_models.modeling_utils.normalization.layernorm",
    "instructlab.dolomite.hf_models.modeling_utils.normalization.rmsnorm",
    "instructlab.dolomite.hf_models.modeling_utils.position_embedding",
    "instructlab.dolomite.utils",
]

[tool.ruff]
target-version = "py310"
# same as black's default line length
line-length = 88

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Fixers will be enabled gradually.
select = [
    # "B",  # flake8-bugbear
    # "E",  # pycodestyle
    # "F",  # Pyflakes
    "Q",  # flake8-quotes
    # Ruff does not support isort's import_headings feature, yet.
    # "I",  # isort
    # "UP",  # pyupgrade
    # "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
ignore = [
    # some embedded strings are longer than 88 characters
    "E501",  # line too long
    "TID252",  # Prefer absolute imports over relative imports from parent modules
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"yamllint".msg = "yamllint is for CLI usage only."

[tool.ruff.lint.isort]
# same as .isort.cfg
from-first = true
# not supported yet
# import-heading-future=Future
# import-heading-stdlib=Standard
# import-heading-thirdparty=Third Party
# import-heading-firstparty=First Party
# import-heading-localfolder=Local
known-local-folder = ["tuning"]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped", "var-annotated", "attr-defined"]
# honor excludes by not following there through imports
follow_imports = "silent"
